# Web_Team_Project

./: .gitignore  README.md  pyproject.toml
personal_assistant/: .env.example  config.ini  manage.py
personal_assistant/contactapp/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/contactapp/migrations/: 0001_initial.py  0002_alter_contact_phone_number.py  0003_alter_contact_address_alter_contact_birth_date_and_more.py  0004_alter_contact_birth_date.py  0005_alter_contact_birth_date.py  0006_alter_contact_birth_date.py
personal_assistant/docs/: conf.py  index.rst
personal_assistant/docs/modules/: newsapp.rst  settings.rst  storageapp.rst  users.rst
personal_assistant/gpt/: apps.py  urls.py  views.py
personal_assistant/gpt/services/: conversation.py
personal_assistant/newsapp/: apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
personal_assistant/noteapp/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/noteapp/migrations/: 0001_initial.py
personal_assistant/noteapp/templates/: search.html
personal_assistant/noteapp/templatetags/: extract_tags.py
personal_assistant/personal_assistant/: asgi.py  settings.py  urls.py  wsgi.py
personal_assistant/storageapp/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py
personal_assistant/storageapp/management/: __init__.py
personal_assistant/storageapp/migrations/: 0001_initial.py  0002_alter_file_file_extension.py  0003_file_created_at_file_user_file_name_and_more.py  0004_alter_file_file_extension_alter_file_file_type_and_more.py  0011_alter_file_file_url.py  (+9 more)
personal_assistant/users/: forms.py  models.py  signals.py  tests.py  urls.py  views.py
(+77 files in other folders)
